--- a/src/components/Searchbar.css
+++ b/src/components/Searchbar.css
@@ -5,6 +5,10 @@
     display: flex;
     align-items: center;
     justify-content: center;
+
+    position: fixed;
+    top: 0;
+    width: 100%;
     
 }
 
