--- a/src/components/footer.css
+++ b/src/components/footer.css
@@ -3,9 +3,8 @@
     position: fixed;
     bottom: 0;
     width: 100%;
-    height: 5em;
     padding-bottom: 1em;
-
+    
 }
 
 .bottom-bar{
